# ChatBotRealEstate

./: .gitignore  Pipfile  README.md  agents.py  app.py  crew.py  pyproject.toml  task.py  zameen_tool.py
static/css/: style.css
static/js/: main.js
templates/: index.html
